<resources>
  <string name="app_name">PnP Manager</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="fragment_start_label">Start Fragment</string>
  <string name="fragment_login_label">Login Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="fragment_start_welcome">Welcome!</string>
  <string name="placeholder_dash">-</string>

  <string name="fragment_login_header">Connect to custom server</string>
  <string name="fragment_login_connect">Connect</string>
  <string name="fragment_login_placeholder_port">Port</string>
  <string name="fragment_login_placeholder_ip">IP</string>

  <string name="fragment_info_character_name">Character Name:</string>
  <string name="fragment_info_character_age">Age:</string>
  <string name="fragment_info_character_race">Race:</string>
  <string name="fragment_info_character_gender">Gender:</string>
  <string name="fragment_info_character_advantages">Advantages:</string>
  <string name="fragment_info_character_disadvantages">Disadvantages:</string>
  <string name="fragment_info_character_history">History:</string>

  <string name="navigation_button_default_server">Connect to default server</string>
  <string name="navigation_button_custom_server">Connect to custom server</string>
  <string name="navigation_button_character">Character</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="fragment_session_overview_fragment_label">Session Overview Fragment</string>
  <string name="session_join_button">Join</string>
  <string name="session_host_label">Host</string>
  <string name="placeholder">Placeholder</string>
  <string name="session_state_label">State</string>
  <string name="fragment_session_lobby_label">Session Lobby</string>
  <string name="healthBarLabel">Health</string>
  <string name="manaBarLabel">Mana</string>
  <string name="experienceBarLabel">Experience</string>
  <string name="arrow"><![CDATA[->]]></string>
  <string name="gold">Gold</string>
  <string name="silver">Silver</string>
  <string name="copper">Copper</string>
</resources>