<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".FirstFragment">

  <Button
    android:id="@+id/button"
    android:layout_width="192dp"
    android:layout_height="41dp"
    android:layout_marginTop="416dp"
    android:text="@string/fragment_login_connect"
    app:layout_constraintEnd_toEndOf="@+id/editTextPort"
    app:layout_constraintStart_toStartOf="@+id/editTextPort"
    app:layout_constraintTop_toTopOf="parent"/>
  <EditText
    android:id="@+id/editTextPort"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="320dp"
    android:ems="10"
    android:hint="@string/fragment_login_placeholder_port"
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <EditText
    android:id="@+id/editTextIP"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="236dp"
    android:digits="0123456789."
    android:ems="10"
    android:hint="@string/fragment_login_placeholder_ip"
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:src="@mipmap/ic_launcher"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="72dp"
    android:text="@string/app_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="132dp"
    android:text="@string/fragment_login_header"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>