<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/CharacterFragment">

  <fragment
    android:id="@+id/StartFragment"
    android:label="@string/fragment_start_label"
    android:name="de.pnp.manager.app.StartFragment"
    tools:layout="@layout/fragment_start">
    <action
      android:id="@+id/action_StartFragment_to_LoginFragment"
      app:destination="@id/LoginFragment"/>
  </fragment>

  <fragment
    android:id="@+id/LoginFragment"
    android:label="@string/fragment_login_label"
    android:name="de.pnp.manager.app.LoginFragment"
    tools:layout="@layout/fragment_login"/>

  <fragment
    android:id="@+id/CharacterFragment"
    android:label="@string/first_fragment_label"
    android:name="de.pnp.manager.app.CharacterFragment"
    tools:layout="@layout/fragment_character_view"/>

  <fragment
    android:id="@+id/CharacterInfoFragment"
    android:label="@string/first_fragment_label"
    android:name="de.pnp.manager.app.InfoFragment"
    tools:layout="@layout/fragment_info"/>

  <fragment
    android:id="@+id/CharacterEquipmentFragment"
    android:label="@string/first_fragment_label"
    android:name="de.pnp.manager.app.EquipmentFragment"
    tools:layout="@layout/fragment_equipment"/>

  <fragment
    android:id="@+id/CharacterTalentsFragment"
    android:label="@string/first_fragment_label"
    android:name="de.pnp.manager.app.TalentsFragment"
    tools:layout="@layout/fragment_talents"/>
</navigation>