<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  android:id="@+id/session_card_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginTop="10dp"
  android:layout_gravity="center"
  android:layout_marginHorizontal="20dp"
  android:weightSum="2"
  app:cardCornerRadius="8dp"
  app:contentPaddingBottom="4dp"
  app:contentPaddingLeft="6dp"
  app:contentPaddingRight="6dp"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="213dp">

    <Button
      android:id="@+id/session_join_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="158dp"
      android:text="@string/session_join_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
      android:id="@+id/session_image_view"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_weight="1"
      android:scaleType="fitXY"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@tools:sample/backgrounds/scenic"/>
    <TextView
      android:id="@+id/session_host_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:text="@string/session_host_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/session_host_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="119dp"
      android:text="@string/placeholder"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/session_state_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="184dp"
      android:layout_marginStart="4dp"
      android:text="@string/placeholder"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/session_capacity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:text="@string/placeholder"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/session_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="54dp"
      android:text="@string/placeholder"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/session_state_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="164dp"
      android:layout_marginStart="4dp"
      android:text="@string/session_state_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>