<?xml version="1.0" encoding="utf-8"?>
<layout>
  <data>
    <variable
      name="character"
      type="de.pnp.manager.model.character.IPnPCharacter"/>
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/imageView2"
          android:layout_width="211dp"
          android:layout_height="250dp"
          android:layout_marginTop="40dp"
          android:layout_marginEnd="16dp"
          android:background="@drawable/frame_image_view"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@tools:sample/avatars"/>
        <TextView
          android:id="@+id/textview_first9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="560dp"
          android:text="@string/fragment_info_character_history"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.075"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textview_first8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="300dp"
          android:layout_marginEnd="102dp"
          android:text="@string/fragment_info_character_disadvantages"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView9"
          android:layout_width="368dp"
          android:layout_height="143dp"
          android:layout_marginTop="580dp"
          android:layout_marginStart="28dp"
          android:text="@{character instanceof de.pnp.manager.model.character.IPlayerCharacter ? ((de.pnp.manager.model.character.IPlayerCharacter) character).history : @string/placeholder_dash}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textview_first"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="40dp"
          android:text="@string/fragment_info_character_name"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.089"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textview_first4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="88dp"
          android:layout_marginStart="29dp"
          android:text="@string/fragment_info_character_age"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textview_first5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="136dp"
          android:layout_marginStart="28dp"
          android:text="@string/fragment_info_character_race"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.002"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textview_first6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="184dp"
          android:layout_marginStart="28dp"
          android:text="@string/fragment_info_character_gender"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.002"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textview_first7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="300dp"
          android:text="@string/fragment_info_character_advantages"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.084"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="56dp"
          android:layout_marginStart="29dp"
          android:text="@{character.name}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="104dp"
          android:layout_marginStart="29dp"
          android:text="@{character instanceof de.pnp.manager.model.character.IPlayerCharacter ? ((de.pnp.manager.model.character.IPlayerCharacter) character).age : @string/placeholder_dash}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="152dp"
          android:layout_marginStart="29dp"
          android:text="@{character instanceof de.pnp.manager.model.character.IPlayerCharacter ? ((de.pnp.manager.model.character.IPlayerCharacter) character).race : @string/placeholder_dash}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="200dp"
          android:layout_marginStart="29dp"
          android:text="@{character instanceof de.pnp.manager.model.character.IPlayerCharacter ? ((de.pnp.manager.model.character.IPlayerCharacter) character).gender : @string/placeholder_dash}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView10"
          android:layout_width="168dp"
          android:layout_height="231dp"
          android:layout_marginTop="319dp"
          android:layout_marginEnd="16dp"
          android:text="@{(String) character.disadvantages.stream().collect(java.util.stream.Collectors.joining())}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView7"
          android:layout_width="168dp"
          android:layout_height="231dp"
          android:layout_marginTop="319dp"
          android:layout_marginStart="29dp"
          android:text="@{(String) character.advantages.stream().collect(java.util.stream.Collectors.joining())}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>