<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="character"
      type="de.pnp.manager.app.model.PnPCharacter"/>
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="41dp"
      tools:layout_editor_absoluteY="-42dp">
      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >
          <ProgressBar
            android:id="@+id/progress_health"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="373dp"
            android:layout_height="43dp"
            android:layout_marginTop="38dp"
            android:layout_marginStart="17dp"
            android:scaleY="5"
            android:progressTint="@color/health_red"
            android:progress="@{character.getHealthPercentage()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/progress_health"
            android:layout_alignBottom="@+id/progress_health"
            android:text="@{character.getHealthPercentageString()}"
            />
        </RelativeLayout>
        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <ProgressBar
            android:id="@+id/progress_mana"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="373dp"
            android:layout_height="43dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="16dp"
            android:scaleY="5"
            android:progressTint="@color/mana_blue"
            android:progress="@{character.getManaPercentage()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/progress_mana"
            android:layout_alignBottom="@+id/progress_mana"
            android:text="@{character.getManaPercentageString()}"
            />
        </RelativeLayout>

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <ProgressBar
            android:id="@+id/progress_xp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="373dp"
            android:layout_height="43dp"
            android:layout_marginTop="160dp"
            android:layout_marginStart="16dp"
            android:progressTint="@color/experience_lila"
            android:progress="@{character instanceof de.pnp.manager.app.model.PlayerCharacter ? ((de.pnp.manager.app.model.PlayerCharacter) character).experiencePercentage : 100}"
            android:scaleY="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/progress_xp"
            android:layout_alignBottom="@+id/progress_xp"
            android:text="@{character instanceof de.pnp.manager.app.model.PlayerCharacter ? ((de.pnp.manager.app.model.PlayerCharacter) character).experiencePercentageString : @string/placeholder_dash}"
            />
        </RelativeLayout>
        <TextView
          android:id="@+id/textView9"
          android:layout_width="368dp"
          android:layout_height="143dp"
          android:layout_marginTop="580dp"
          android:layout_marginStart="28dp"
          android:text="@{character instanceof de.pnp.manager.app.model.PlayerCharacter ? ((de.pnp.manager.model.character.IPlayerCharacter) character).history : @string/placeholder_dash}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="352dp"
          android:layout_marginStart="84dp"
          android:text="@{character instanceof de.pnp.manager.model.character.IPlayerCharacter ? ((de.pnp.manager.model.character.IPlayerCharacter) character).gender : @string/placeholder_dash}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView11"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="28dp"
          android:layout_marginStart="17dp"
          android:text="@string/healthBarLabel"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView12"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="90dp"
          android:layout_marginStart="16dp"
          android:text="@string/manaBarLabel"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/textView14"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="151dp"
          android:layout_marginStart="16dp"
          android:text="@string/experienceBarLabel"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>